--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,9 +3,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimary"
     android:orientation="vertical"
-    tools:context=".activity.LoginActivity"
-    android:background="@color/colorPrimary">
+    tools:context=".activity.LoginActivity">
 
     <ImageView
         android:layout_width="140dp"
@@ -20,14 +20,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:layout_marginTop="12dp"
-        android:hint="@string/mobile_number"
-        android:inputType="number"
+        android:layout_marginRight="20dp"
         android:background="@drawable/text_boundary_background"
-        android:maxLength="10"
         android:drawableLeft="@drawable/ic_action_phone"
         android:drawablePadding="3dp"
+        android:hint="@string/mobile_number"
+        android:inputType="number"
+        android:maxLength="10"
         android:maxLines="1"
         android:padding="10dp" />
 
@@ -36,41 +36,41 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
         android:layout_marginTop="12dp"
+        android:layout_marginRight="20dp"
+        android:background="@drawable/text_boundary_background"
+        android:drawableLeft="@drawable/ic_action_password"
+        android:drawablePadding="3dp"
         android:hint="@string/password"
         android:inputType="numberPassword"
         android:maxLength="6"
-        android:background="@drawable/text_boundary_background"
         android:maxLines="1"
-        android:drawableLeft="@drawable/ic_action_password"
-        android:drawablePadding="3dp"
         android:padding="10dp" />
 
     <Button
         android:id="@+id/btnLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
         android:layout_marginRight="20dp"
         android:background="@color/colorPrimaryDark"
         android:text="@string/login"
         android:textAllCaps="false"
-        android:textStyle="bold"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtForgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/forgot_password"
+        android:layout_gravity="center"
         android:layout_marginTop="5dp"
         android:padding="8dp"
+        android:text="@string/forgot_password"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/white"
-        android:layout_gravity="center" />
+        android:textColor="@android:color/white" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -82,16 +82,16 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
+            android:layout_marginBottom="10dp"
             android:background="@color/colorPrimary"
             android:clickable="true"
             android:focusable="true"
-            android:textAllCaps="false"
             android:padding="8dp"
-            android:textAlignment="center"
             android:text="@string/register_yourself"
+            android:textAlignment="center"
+            android:textAllCaps="false"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@android:color/white"
-            android:layout_marginBottom="10dp" />
+            android:textColor="@android:color/white" />
 
     </RelativeLayout>
 </LinearLayout>
