--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -11,9 +11,9 @@
         android:layout_height="wrap_content">
 
         <RelativeLayout
+            android:id="@+id/rlRegister"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/rlRegister"
             android:background="@color/colorPrimary">
 
             <include
@@ -35,17 +35,17 @@
                 android:id="@+id/etOTP"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/text_boundary_background"
                 android:layout_below="@+id/txtEnterOTP"
                 android:layout_marginLeft="12dip"
                 android:layout_marginTop="30dip"
                 android:layout_marginRight="12dip"
-                android:maxLength="4"
+                android:background="@drawable/text_boundary_background"
                 android:drawableLeft="@drawable/ic_action_phone"
                 android:drawablePadding="3dp"
-                android:maxLines="1"
                 android:hint="@string/otp"
                 android:inputType="phone"
+                android:maxLength="4"
+                android:maxLines="1"
                 android:padding="10dip"
                 android:singleLine="true"
                 android:textColor="@android:color/black"
@@ -54,18 +54,18 @@
             <EditText
                 android:id="@+id/etNewPassword"
                 android:layout_width="match_parent"
-                android:background="@drawable/text_boundary_background"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/etOTP"
                 android:layout_marginLeft="12dip"
                 android:layout_marginTop="6dip"
                 android:layout_marginRight="12dip"
-                android:hint="@string/new_password"
-                android:inputType="numberPassword"
-                android:padding="10dip"
-                android:maxLength="6"
+                android:background="@drawable/text_boundary_background"
                 android:drawableLeft="@drawable/ic_action_password"
                 android:drawablePadding="3dp"
+                android:hint="@string/new_password"
+                android:inputType="numberPassword"
+                android:maxLength="6"
+                android:padding="10dip"
                 android:singleLine="true"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
@@ -74,18 +74,18 @@
                 android:id="@+id/etConfirmPassword"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/text_boundary_background"
                 android:layout_below="@+id/etNewPassword"
                 android:layout_marginLeft="12dip"
                 android:layout_marginTop="6dip"
                 android:layout_marginRight="12dip"
-                android:hint="@string/confirm_password"
-                android:inputType="numberPassword"
-                android:padding="10dip"
-                android:singleLine="true"
-                android:maxLength="6"
+                android:background="@drawable/text_boundary_background"
                 android:drawableLeft="@drawable/ic_action_password"
                 android:drawablePadding="3dp"
+                android:hint="@string/confirm_password"
+                android:inputType="numberPassword"
+                android:maxLength="6"
+                android:padding="10dip"
+                android:singleLine="true"
                 android:textColor="@android:color/black"
                 android:textSize="16sp" />
 
@@ -102,9 +102,9 @@
                 android:background="@color/colorPrimaryDark"
                 android:text="@string/submit"
                 android:textAllCaps="false"
-                android:textStyle="bold"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:textColor="@android:color/white" />
+                android:textColor="@android:color/white"
+                android:textStyle="bold" />
         </RelativeLayout>
 
     </RelativeLayout>
