--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -10,9 +10,9 @@
     <ImageView
         android:layout_width="160dp"
         android:layout_height="160dp"
-        android:src="@drawable/app_logo"
+        android:layout_above="@+id/txtAppName"
         android:layout_centerHorizontal="true"
-        android:layout_above="@+id/txtAppName" />
+        android:src="@drawable/app_logo" />
 
     <TextView
         android:id="@+id/txtAppName"
@@ -22,7 +22,7 @@
         android:gravity="center"
         android:text="@string/app_name"
         android:textColor="@android:color/white"
-        android:textStyle="bold"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:textStyle="bold" />
 
 </RelativeLayout>
