--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -12,9 +12,9 @@
         android:layout_height="80dp"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:src="@drawable/profile_icon"
+        android:layout_marginLeft="15dip"
         android:layout_marginTop="48dip"
-        android:layout_marginLeft="15dip" />
+        android:src="@drawable/profile_icon" />
 
     <TextView
         android:id="@+id/txtDrawerText"
@@ -23,15 +23,15 @@
         android:layout_above="@+id/txtPhone"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
-        android:layout_marginBottom="5dip"
-        android:layout_marginTop="12dip"
         android:layout_marginLeft="15dip"
+        android:layout_marginTop="12dip"
+        android:layout_marginBottom="5dip"
         android:clickable="true"
-        android:textStyle="bold"
         android:text="@string/app_name"
         android:textAllCaps="false"
         android:textColor="@android:color/white"
-        android:textSize="22sp" />
+        android:textSize="22sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtDrawerSecondaryText"
@@ -41,8 +41,8 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_marginLeft="18dip"
-        android:textAllCaps="false"
         android:text="@string/app_name"
+        android:textAllCaps="false"
         android:textColor="@android:color/white"
         android:textSize="16sp" />
 </LinearLayout>
