--- a/app/src/main/res/layout/fragment_faq.xml
+++ b/app/src/main/res/layout/fragment_faq.xml
@@ -18,152 +18,152 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
                 android:text="Q.1 How will the training be delivered?"
-                android:layout_centerHorizontal="true"
-                android:textColor="@color/colorPrimaryDark"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:padding="10dp" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
                 android:text="@string/faq_answer_one"
-                android:layout_centerHorizontal="true"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:padding="10dp"
                 android:textColor="@android:color/black" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@android:color/darker_gray"
+                android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
-                android:layout_marginTop="5dp" />
+                android:background="@android:color/darker_gray" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
                 android:text="Q.2 What will be the timings of the training?"
-                android:textColor="@color/colorPrimaryDark"
-                android:layout_centerHorizontal="true"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:padding="10dp" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
                 android:text="@string/faq_answer_two"
-                android:layout_centerHorizontal="true"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:padding="10dp"
                 android:textColor="@android:color/black" />
 
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:background="@android:color/darker_gray" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
                 android:text="Q.3 What is the duration of training?"
-                android:layout_centerHorizontal="true"
-                android:textColor="@color/colorPrimaryDark"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:padding="10dp" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
                 android:text="@string/faq_answer_three"
-                android:layout_centerHorizontal="true"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:padding="10dp"
                 android:textColor="@android:color/black" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:background="@android:color/darker_gray" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
                 android:text="Q.4 How much time should I spend everyday?"
-                android:layout_centerHorizontal="true"
-                android:textColor="@color/colorPrimaryDark"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:padding="10dp" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
                 android:text="@string/faq_answer_four"
-                android:layout_centerHorizontal="true"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:padding="10dp"
                 android:textColor="@android:color/black" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:background="@android:color/darker_gray" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:padding="10dp"
                 android:text="Q.5 When can I start my training?"
-                android:layout_centerHorizontal="true"
-                android:textColor="@color/colorPrimaryDark"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:padding="10dp" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/faq_answer_five"
                 android:layout_centerHorizontal="true"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:padding="10dp"
+                android:text="@string/faq_answer_five"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:background="@android:color/darker_gray" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Q.6 When will I get the certificate?"
                 android:layout_centerHorizontal="true"
-                android:textColor="@color/colorPrimaryDark"
+                android:padding="10dp"
+                android:text="Q.6 When will I get the certificate?"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:padding="10dp" />
+                android:textColor="@color/colorPrimaryDark" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/faq_answer_six"
                 android:layout_centerHorizontal="true"
-                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:padding="10dp"
+                android:text="@string/faq_answer_six"
+                android:textAppearance="?android:attr/textAppearanceMedium"
                 android:textColor="@android:color/black" />
 
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:layout_marginBottom="5dp"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:background="@android:color/darker_gray" />
         </LinearLayout>
 
