--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -16,8 +16,8 @@
             android:id="@+id/recyclerRestaurants"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:layout_below="@+id/llSearchBar" />
+            android:layout_below="@+id/llSearchBar"
+            android:padding="5dp" />
 
     </RelativeLayout>
 
