--- a/app/src/main/res/layout/order_history_custom_row.xml
+++ b/app/src/main/res/layout/order_history_custom_row.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,25 +15,25 @@
             android:id="@+id/txtOrderHistoryResName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="5dp"
             android:layout_margin="10dp"
             android:layout_weight="2"
+            android:padding="5dp"
             android:text="@string/restaurant_name"
-            android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtOrderDate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_margin="5dp"
             android:layout_weight="1"
             android:padding="5dp"
-            android:layout_margin="5dp"
             android:text="@string/order_date"
-            android:textStyle="bold"
+            android:textAppearance="?android:attr/textAppearanceMedium"
             android:textSize="13sp"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textStyle="bold" />
 
     </LinearLayout>
 
@@ -41,7 +41,7 @@
         android:id="@+id/recyclerOrderHistoryItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        tools:listitem="@layout/order_item_custom_row"/>
+        tools:listitem="@layout/order_item_custom_row" />
 
     <View
         android:id="@+id/vline"
