--- a/app/src/main/res/layout/restaurant_detail_custom_row.xml
+++ b/app/src/main/res/layout/restaurant_detail_custom_row.xml
@@ -10,18 +10,18 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="12.5dp"
-        android:padding="10dp"
-        android:textAlignment="center"
         android:layout_weight="1.25"
+        android:padding="10dp"
         android:text="1"
+        android:textAlignment="center"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginVertical="6dp"
         android:layout_weight="6"
-        android:layout_marginVertical="6dp">
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/txtMenuItem"
@@ -29,18 +29,18 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             android:text="@string/restaurant_name"
-            android:textStyle="bold"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/txtItemCost"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="4dp"
-            android:textSize="14sp"
             android:text="Rs. 300"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
@@ -49,8 +49,8 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
-        android:textColor="@color/white"
+        android:layout_weight="2.75"
         android:text="Add"
-        android:layout_weight="2.75" />
+        android:textColor="@color/white" />
 
 </LinearLayout>
