--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -1,29 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto" >
 
-    <group android:checkableBehavior="single">
+    <item android:id="@+id/sort"
+        android:icon="@drawable/ic_action_sort"
+        app:showAsAction="always"
+        android:title="@string/sort"
+        android:orderInCategory="100">
 
-        <item
-            android:id="@+id/sort_costLtoH"
-            android:checked="true"
-            android:icon="@drawable/action_home"
-            android:title="@string/home" />
+        <menu>
+            <item
+                android:id="@+id/sort_name"
+                android:title="@string/sort_name"/>
 
-        <item
-            android:id="@+id/sort_costHtoL"
-            android:icon="@drawable/action_person"
-            android:title="@string/my_profile" />
+            <item
+                android:id="@+id/sort_rating"
+                android:title="@string/sort_rating" />
 
-        <item
-            android:id="@+id/sort_rating"
-            android:icon="@drawable/action_fav"
-            android:title="@string/favorites" />
+            <item
+                android:id="@+id/sort_costLtoH"
+                android:title="@string/sort_costLtoH"/>
 
-        <item
-            android:id="@+id/ordHis"
-            android:icon="@drawable/action_history"
-            android:title="@string/order_history" />
+            <item
+                android:id="@+id/sort_costHtoL"
+                android:title="@string/sort_costHtoL"/>
+        </menu>
 
-    </group>
+    </item>
 
 </menu>
