--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto" >
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/sort"
+    <item
+        android:id="@+id/sort"
         android:icon="@drawable/ic_action_sort"
-        app:showAsAction="always"
+        android:orderInCategory="100"
         android:title="@string/sort"
-        android:orderInCategory="100">
+        app:showAsAction="always">
 
         <menu>
             <item
                 android:id="@+id/sort_name"
-                android:title="@string/sort_name"/>
+                android:title="@string/sort_name" />
 
             <item
                 android:id="@+id/sort_rating"
@@ -19,11 +20,11 @@
 
             <item
                 android:id="@+id/sort_costLtoH"
-                android:title="@string/sort_costLtoH"/>
+                android:title="@string/sort_costLtoH" />
 
             <item
                 android:id="@+id/sort_costHtoL"
-                android:title="@string/sort_costHtoL"/>
+                android:title="@string/sort_costHtoL" />
         </menu>
 
     </item>
